--- a/pac-man-project/Assembly-CSharp-vs.csproj
+++ b/pac-man-project/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts\Utility.cs" />
      <Compile Include="Assets\scripts\ghostmove.cs" />
      <Compile Include="Assets\scripts\pacmanmove.cs" />
      <None Include="Assets\shaders\Shadless.shader" />
